Fix overflowing blog list on small screens

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,6 @@
+@value variables: "./variables.css";
+@value sm, md, lg, xl from variables;
+
 .site-wrapper {
   display: flex;
   flex-direction: column;
@@ -17,6 +20,13 @@
 }
 
 .blog-list {
-  margin-right: -1.5rem;
-  margin-left: -1.5rem;
+  margin-right: -1rem;
+  margin-left: -1rem;
+}
+
+@media screen and (min-width: sm) {
+  .blog-list {
+    margin-right: -1.5rem;
+    margin-left: -1.5rem;
+  }
 }
