--- a/src/styles/postLink.module.css
+++ b/src/styles/postLink.module.css
@@ -4,12 +4,19 @@
 
 .post-link {
   display: block;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
   color: text;
   text-decoration: none;
   border-radius: 3px;
   background-color: #fff;
   transition: background-color .05s ease-in-out;
+}
+
+@media screen and (min-width: sm) {
+  .post-link {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
 }
 
 .post-link:not(:last-of-type) {
